# ksa-compliance

./: .env  .env.prod  .env.simulation  cli.py  compliance_auth.json  config.py  main.py  pyproject.toml  requirements.txt
api/: main.py
api/invoice_utils/: e-invoice.txt  invoice_compliance.py  invoice_generator.py  test.py  test.xml  zatca_simplified_invoice.xml
cli/: .env.sandbox  cli.py  compliance_auth.json  productionn_auth.json
cli/csrs/: PrivateKey.pem  PublicKey.pem  certificate.csr  openssl_config.cnf
cli/invoices/: invoice_compliance.py
csr_generation/: csr_generation.py  csr_test.py  default.cnf  test.py  zatca_csr_gen.py
csrs/: PrivateKey.pem  PublicKey.pem  certificate.csr  openssl_config.cnf
csrtest/: PrivateKey.pem  PublicKey.pem  t64.csr  taxpayer.csr  zatca_config.cnf
csrtest/sdk-test/zatca-sdk/: config.properties
csrtest/sdk-test/zatca-sdk/zatca-einvoicing-sdk-Java-238-R3.4.3/Configuration/: config.json
invoices/: invoice_compliance.py
invoices/Resources/: transform.xsl
routers/: invoices.py  onboarding.py
tests/: cert_decoder.py  validate.py
utils/: cert_decoder.py  e-invoice.txt  invoice.xml  invoice_compliance.py  invoice_generator.py  registration.py  temp.xml  test.xml  test_signed.xml  validate.py  zatca_simplified_invoice.xml  zatca_simplified_invoice_signed.xml
utils/Invoices/: Signature.xml  ZatcaDataUbl.xml  invoice.py  test.py
utils/csr_generation/: csr_generation.py  zatca_csr_gen.py
utils/csr_generation/certificates/: PrivateKey.pem  taxpayer.csr
